--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+node_modules/
+dist/
+build/
+.env
+.DS_Store
+/.vscode
+npm-debug.log*
+yarn-error.log*
+/.idea
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
